--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <!--first section-->
 <section>
-	<div>
+	<div id="profileimage">
 	<img class="rounded-circle img-fluid float-right mt-5 mr-5" src="images/img1.jpeg" alt="photo" width="320" height="250" id="img-one">
 	</div>
 	<div class="container-fluid bg-dark" id="container-design" style="box-shadow: inset 4px 10px 7px 0px #5c3f3f;">
@@ -71,7 +71,7 @@
 <hr>
 <br>
 	<div class="footer" style="background-color: black;width: 100%;">
-      <p class="text-center text-white">copiright by anilkumar75036@gmail.com</p>
+      <p class="text-center text-white" id="footerindex">copiright by anilkumar75036@gmail.com</p>
     </div>
     <script type="text/javascript">
     	window.alert("Welcome to my Portfolio")
