--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<title>Contact me</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet"> 
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,28 +12,48 @@
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-	<div class="container-full text-center h-25 bg-dark" id="container-full-design" style="color: darkgray;">
-	<h1 id="heading-one" class="text-center">Please contact me </h1>
-	</div>
+	<!--nav-->
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="box-shadow: inset 4px 10px 7px 0px #5c3f3f;">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#"><i class="fas fa-code"></i></a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html" id="home">HOME</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html" id="contact">Contact me</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#" id="project">My personal projects</a>
+    </li>
+  </ul>
+</nav>
+<!--nav end-->
+<br>
+	
+    <h1 id="heading-one" class="text-center">Please contact me </h1>
+	
 	<section>
-		<marquee><img src="images/animated.gif"></marquee>
+		<marquee><img src="images/animated.gif" id="anigif"></marquee>
 	</section>
 
 	<section>
 		<div class="container">
 		    <img class="img-fluid" src="images/img2.jpeg" alt="img2">
 		    </div>
-		    <h2 class="text-center">please contact here</h2>
+		    <h2 class="text-center" id="pch">please contact here</h2>
 			<div style="border: 10px solid gray;"></div><br><br>
 			<div class="container-fluid" id="container-fluid-design-two">
-			<h4 class="ml-5" id="h-four1"><img class="img-fluid ml-5" src="images/call.png" style="width: 70px">8178492963</h4>
-			<h5 class="ml-5" id="h-five1"><a href="https://accounts.google.com/ServiceLogin/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=AddSession"><img class="img-fluid ml-5" src="images/gmail.png" style="width: 70px;"></a>anilkumar75036@gmail.com</h5>
-			<h5 class="ml-5" id="h-five2"><a href="https://twitter.com/login?lang=en"><img class="img-fluid ml-5" src="images/twitter.png" style="width: 70px;"></a>Anil80118895</h5>
+			<h4 class="ml-5" id="h-four1"><i class="fas fa-phone-volume"></i>8178492963</h4>
+			<h5 class="ml-5 mt-2" id="h-five1"><a href="https://accounts.google.com/ServiceLogin/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=AddSession"><i class="far fa-envelope" id="eml"></i></a>anilkumar75036@gmail.com</h5>
+			<h5 class="ml-5 mt-3" id="h-five2"><a href="https://twitter.com/login?lang=en"><i class="fab fa-twitter"></i></a>Anil80118895</h5>
 			</div>
 			</section>
 			<br><br><br>
 			<div class="footer" style="background-color: gray;width: 100%;">
-  <p class="text-center text-white">copiright by anilkumar75036@gmail.com</p>
+  <p class="text-center text-white" id="footercontact">copiright by anilkumar75036@gmail.com</p>
 </div>
 
 
